resources/css/components/song-item.css
@import "../default.css";
:host {
    display: grid;
    user-select: none;
    grid-gap: 16px;
    padding: 0 16px;
    height: 60px;
    grid-template-columns: [index] minmax(0, 16px) [title] minmax(0, 3fr) [var1] minmax(0, 2fr) [last] minmax(0, 1fr);
    > div {
        display: flex;
        align-items: center;
        > span {
            text-overflow: ellipsis;
            overflow: hidden;
            white-space: nowrap;
        }
    }
}
:host(:hover) {
    background-color: color-mix(in hsl, var(--accent-color) 40%, transparent);
}
:host(:state(selected)) {
    background-color: color-mix(in hsl, var(--accent-color) 70%, transparent);
}

